fixed an issue of the copy button wraping between 309px and 300px screen width

--- a/react-app/src/components/generatorsDisplay/GeneratorCard.css
+++ b/react-app/src/components/generatorsDisplay/GeneratorCard.css
@@ -145,7 +145,7 @@
     }
 }
 
-@media only screen and (max-width: 300px){
+@media only screen and (max-width: 310px){
     .iterator-label{
         display: none;
     }
